--- a/UKTrains.WP8/LiveProgressPage.xaml
+++ b/UKTrains.WP8/LiveProgressPage.xaml
@@ -17,13 +17,16 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    toolkit:TiltEffect.IsTiltEnabled="True">
+    toolkit:TiltEffect.IsTiltEnabled="True"
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=nationalRail:SampleData}">
 
     <Grid x:Name="LayoutRoot" Background="Transparent">
 
         <Grid.Resources>
 
+            <coding4funConverters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
             <coding4funConverters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
+            
             <src:JourneyElementStatusToColorConverter x:Key="statusToColorConverter" 
                                                       Cancelled="Red"
                                                       Delayed="Orange"
@@ -35,58 +38,65 @@
                                              NotDeparted="{StaticResource PhoneForegroundBrush}" />
             
             <DataTemplate x:Key="journeyElementTemplate">
-                <Grid Margin="12,0,0,4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="70" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="70"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Text="{Binding Departs}" 
-                               Foreground="{StaticResource PhoneAccentBrush}" 
-                               FontSize="28"
-                               TextAlignment="Center"
-                               HorizontalAlignment="Center" />
-                    <TextBlock Text="{Binding Station}" 
-                               Foreground="{Binding Status, Converter={StaticResource hasDepartedToColorConverter}}"
-                               Grid.Column="1"
-                               Margin="4,0"
-                               FontSize="28"
-                               TextWrapping="Wrap"
-                               HorizontalAlignment="Left" />
-                    <TextBlock Text="{Binding Platform.Value}" 
-                               Grid.Column="2"
-                               Grid.RowSpan="2"
-                               Foreground="{StaticResource PhoneAccentBrush}"
-                               Margin="0,-4,0,0"
-                               FontSize="32"
-                               HorizontalAlignment="Center"
-                               VerticalAlignment="Top" />
-                    <TextBlock Text="{Binding Expected.Value}" 
-                               Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
-                               Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
-                               FontSize="16"
-                               Grid.Row="1"
-                               TextAlignment="Center"
-                               HorizontalAlignment="Center" />
-                    <TextBlock Text="{Binding Status}" 
-                               Margin="4,0"
-                               Grid.Column="1" 
-                               Grid.Row="1" 
-                               FontSize="16"
-                               Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
-                               Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
-                               HorizontalAlignment="Left" />
-                </Grid>
+                <Button IsEnabled="False">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid Margin="12,0,0,12">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="56" />
+                                    <ColumnDefinition Width="12" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="12" />
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Departs}"
+                                           Foreground="{StaticResource PhoneAccentBrush}"
+                                           HorizontalAlignment="Right"
+                                           Margin="0,12,0,0" />
+                                <TextBlock Text="{Binding Station}" 
+                                           Grid.Column="2"
+                                           FontSize="{StaticResource PhoneFontSizeLarge}"
+                                           Foreground="{Binding Status, Converter={StaticResource hasDepartedToColorConverter}}"
+                                           TextWrapping="Wrap" />
+                                <Border Background="{StaticResource PhoneAccentBrush}"
+                                        Visibility="{Binding PlatformIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                        Grid.Column="4" 
+                                        Grid.RowSpan="3"
+                                        Margin="0,4,0,0"
+                                        VerticalAlignment="Top"
+                                        Width="42"
+                                        Height="42">
+                                    <TextBlock Text="{Binding Platform.Value}" 
+                                               FontFamily="{StaticResource PhoneFontFamilyBold}"                                               
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Center" />
+                                </Border>
+                                <TextBlock Text="{Binding Expected}" 
+                                           Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
+                                           Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
+                                           FontSize="{StaticResource PhoneFontSizeSmall}"
+                                           HorizontalAlignment="Right"
+                                           Grid.Row="1" />
+                                <TextBlock Text="{Binding Status}" 
+                                           Grid.Column="2" 
+                                           Grid.Row="1" 
+                                           FontSize="{StaticResource PhoneFontSizeSmall}"
+                                           Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
+                                           Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
             </DataTemplate>
         </Grid.Resources>
 
         <controls:Pivot x:Name="pivot">
             <controls:PivotItem Header="Live Progress">
-                <Grid d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=nationalRail:SampleData}">
+                <Grid>
                     <ItemsControl x:Name="journeyElements" 
                                   ItemsSource="{Binding LiveProgress}"
                                   ItemTemplate="{StaticResource journeyElementTemplate}">
@@ -110,10 +120,10 @@
                                HorizontalAlignment="Center" />
                     <TextBlock x:Name="journeyElementsLastUpdatedTextBlock" 
                                Text="{Binding LastUpdated}"
+                               Margin="12,-28,0,0"
                                VerticalAlignment="Top"
-                               Margin="12,-26,0,0"
                                Foreground="{StaticResource PhoneDisabledBrush}"
-                               FontSize="18" />
+                               FontSize="{StaticResource PhoneFontSizeSmall}" />
                 </Grid>
             </controls:PivotItem>
         </controls:Pivot>
