--- a/LearnOnTheGo.WP8/SettingsPage.xaml
+++ b/LearnOnTheGo.WP8/SettingsPage.xaml
@@ -31,7 +31,7 @@
  
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Icons/dark/appbar.check.png" Text="Save" Click="OnSaveClick"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.check.png" Text="Save" Click="OnSaveClick"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
