--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -16,7 +16,29 @@
     shell:SystemTray.IsVisible="True"
     toolkit:TiltEffect.IsTiltEnabled="True">
 
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <toolkit:TransitionService.NavigationInTransition>
+        <toolkit:NavigationInTransition>
+            <toolkit:NavigationInTransition.Backward>
+                <toolkit:TurnstileTransition Mode="BackwardIn"/>
+            </toolkit:NavigationInTransition.Backward>
+            <toolkit:NavigationInTransition.Forward>
+                <toolkit:TurnstileTransition Mode="ForwardIn"/>
+            </toolkit:NavigationInTransition.Forward>
+        </toolkit:NavigationInTransition>
+    </toolkit:TransitionService.NavigationInTransition>
+
+    <toolkit:TransitionService.NavigationOutTransition>
+        <toolkit:NavigationOutTransition>
+            <toolkit:NavigationOutTransition.Backward>
+                <toolkit:TurnstileTransition Mode="BackwardOut"/>
+            </toolkit:NavigationOutTransition.Backward>
+            <toolkit:NavigationOutTransition.Forward>
+                <toolkit:TurnstileTransition Mode="ForwardOut"/>
+            </toolkit:NavigationOutTransition.Forward>
+        </toolkit:NavigationOutTransition>
+    </toolkit:TransitionService.NavigationOutTransition>
+
+    <Grid Background="Transparent">
 
         <Grid.Resources>
             <DataTemplate x:Key="courseTemplate">
@@ -83,14 +105,14 @@
                 </ScrollViewer>
             </controls:PivotItem>
 
-            <controls:PivotItem Header="Completed" Margin="24,28,0,0">
+            <controls:PivotItem Header="Finished" Margin="24,28,0,0">
                 <ScrollViewer>
                     <Grid>
-                        <ItemsControl x:Name="completedCourses"
+                        <ItemsControl x:Name="finishedCourses"
                                       ItemTemplate="{StaticResource courseTemplate}" />
-                        <TextBlock x:Name="completedCoursesEmptyMessage" 
+                        <TextBlock x:Name="finishedCoursesEmptyMessage" 
                                    Visibility="Collapsed"
-                                   Text="No completed courses"
+                                   Text="No finished courses"
                                    TextWrapping="Wrap"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center" />
